[IMP]Se modifico el archivo AppicationDbContext.cs para que cree las tablas basicas del programa, se elimino Usiario porque ahora se usa la tabla User de identity

--- a/HandHunters/appsettings.json
+++ b/HandHunters/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-HandHunters-5095c38e-7471-44e9-9edf-995de8d8edd0;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=HandHunters;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
